❇ supports data transformations with https://github.com/SelectTransform/st.js

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "path-to-regexp": "^6.2.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "stjs": "^0.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
